--- a/frontend/todoClientReact/android/app/src/main/res/values/strings.xml
+++ b/frontend/todoClientReact/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">todoClientReact</string>
+    <string name="facebook_app_id">653951888478154</string>
 </resources>
